--- a/about-me.html
+++ b/about-me.html
@@ -174,7 +174,7 @@
                           <a href="services.html">Services</a>
                         </li>
                         <li class="submenu__item">
-                          <a href="team.html">Our team</a>
+                          <a href="#">Our team</a>
                         </li>
                         <li class="submenu__item">
                           <a href="pricing.html">Pricing</a>
