--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </g>
           </svg>
             <!-- logo text -->
-            <span class="mxd-logo__text logo-animate-hover animated-logo-text">krishnamoorthi</span>
+            <span class="mxd-logo__text logo-animate-hover animated-logo-text">Krishnamoorthi</span>
         
         </a>
       </div>
@@ -383,8 +383,8 @@
             </div>
             <div class="mxd-hero-09__objects">
               <div class="hero-09-objects__image loading__item">
-                <!-- <video src="video/1920x1080_video-03.mp4"></video> -->
-                <img class="mxd-move" src="img/hero/05_hero-img.webp" alt="Hero Image"> 
+               
+                <img class="mxd-move" src="img/krishna/profile_image-removebg-preview.png" style="background: none;" alt="Hero Image"> 
               </div>
               <div class="hero-09-objects__item item-01 loading__item">
                 <div class="mxd-counter horizontal">
@@ -454,7 +454,36 @@
                           <div class="row g-0">
                             <div class="col-12 mxd-grid-item no-margin">
                               <div class="mxd-section-title__title">
-                                <h2 class="h2-large reveal-type">Projects</h2>
+                                <h2 class="h2-large reveal-type animated-projects-title">Projects</h2>
+                                <style>
+                                .animated-projects-title {
+                                  display: inline-block;
+                                  background: linear-gradient(90deg, #ff9800, #ff5e62, #ff9800 80%);
+                                  background-size: 200% auto;
+                                  color: #fff;
+                                  background-clip: text;
+                                  -webkit-background-clip: text;
+                                  -webkit-text-fill-color: transparent;
+                                  animation: projects-gradient-move 3s linear infinite, projects-fade-in 1.2s cubic-bezier(.4,2,.6,1);
+                                  letter-spacing: 2px;
+                                  filter: drop-shadow(0 2px 16px #ff980088);
+                                  transition: filter 0.2s, transform 0.2s;
+                                }
+                                @keyframes projects-gradient-move {
+                                  0% { background-position: 0% 50%; }
+                                  100% { background-position: 100% 50%; }
+                                }
+                                @keyframes projects-fade-in {
+                                  from { opacity: 0; transform: translateY(40px) scale(0.95);}
+                                  to { opacity: 1; transform: translateY(0) scale(1);}
+                                }
+                                .animated-projects-title:hover,
+                                .animated-projects-title:focus {
+                                  animation-play-state: paused;
+                                  filter: drop-shadow(0 4px 32px #ff9800cc);
+                                  transform: scale(1.08) rotate(-2deg);
+                                }
+                                </style>
                               </div>
                             </div>
                             <!-- <div class="col-12 mxd-grid-item no-margin">
@@ -883,7 +912,7 @@
                   <use xlink:href="#textPath" fill="none"></use>
                   <text>
                     <!-- button text here!!! -->
-                    <textPath xlink:href="#textPath">Let's start new project *  </textPath>
+                    <textPath xlink:href="#textPath">Let's start new project * Backend Developer</textPath>
                   </text>
                 </g>
               </svg>
@@ -911,7 +940,36 @@
                 <div class="row g-0">
                   <div class="col-12 col-xl-5 mxd-grid-item no-margin">
                     <div class="mxd-section-title__hrtitle">
-                      <h2 class="reveal-type anim-uni-in-up">Recent insights</h2>
+                      <h2 class="reveal-type anim-uni-in-up animated-blog-title">Recent insights</h2>
+                      <style>
+                        .animated-blog-title {
+                          display: inline-block;
+                          background: linear-gradient(90deg, #ff9800, #ff5e62, #ff9800 80%);
+                          background-size: 200% auto;
+                          color: #fff;
+                          background-clip: text;
+                          -webkit-background-clip: text;
+                          -webkit-text-fill-color: transparent;
+                          animation: blog-gradient-move 3s linear infinite, blog-fade-in 1.2s cubic-bezier(.4,2,.6,1);
+                          letter-spacing: 2px;
+                          filter: drop-shadow(0 2px 16px #ff980088);
+                          transition: filter 0.2s, transform 0.2s;
+                        }
+                        @keyframes blog-gradient-move {
+                          0% { background-position: 0% 50%; }
+                          100% { background-position: 100% 50%; }
+                        }
+                        @keyframes blog-fade-in {
+                          from { opacity: 0; transform: translateY(40px) scale(0.95);}
+                          to { opacity: 1; transform: translateY(0) scale(1);}
+                        }
+                        .animated-blog-title:hover,
+                        .animated-blog-title:focus {
+                          animation-play-state: paused;
+                          filter: drop-shadow(0 4px 32px #ff9800cc);
+                          transform: scale(1.08) rotate(-2deg);
+                        }
+                      </style>
                     </div>
                   </div>
                   <div class="col-12 col-xl-4 mxd-grid-item no-margin">
@@ -1277,16 +1335,16 @@
             <div class="footer-blocks__block">
               <!-- card title -->
               <div class="footer-blocks__title anim-uni-in-up">
-                <p class="footer-blocks__title-l">Ecosystem</p>
+                <p class="footer-blocks__title-l">Social Connections</p>
               </div>
               <!-- footer socials -->
               <div class="footer-blocks__socials">
                 <ul class="footer-socials">
-                  <li class="footer-socials__item anim-uni-in-up"><a href="https://dribbble.com/" class="footer-socials__link" target="_blank">Dribbble</a></li>
-                  <li class="footer-socials__item anim-uni-in-up"><a href="https://www.behance.net/" class="footer-socials__link" target="_blank">Behance</a></li>
+                  <li class="footer-socials__item anim-uni-in-up"><a href="https://facebook.com/" class="footer-socials__link" target="_blank">Facebook</a></li>
+                  <li class="footer-socials__item anim-uni-in-up"><a href="https://www.linkedin.com/" class="footer-socials__link" target="_blank">LinkedIn</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://www.instagram.com/" class="footer-socials__link" target="_blank">Instagram</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://github.com/" class="footer-socials__link" target="_blank">Github</a></li>
-                  <li class="footer-socials__item anim-uni-in-up"><a href="https://codepen.io/" class="footer-socials__link" target="_blank">Codepen</a></li>
+                  <li class="footer-socials__item anim-uni-in-up"><a href="https://telegram.org/" class="footer-socials__link" target="_blank">Telegram</a></li>
                   <li class="footer-socials__item anim-uni-in-up"><a href="https://www.figma.com/community" class="footer-socials__link" target="_blank">Figma Community</a></li>
                 </ul>
               </div>
