--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <div class="mxd-hero-09__objects">
               <div class="hero-09-objects__image loading__item">
                
-                <img class="mxd-move" src="img/krishna/profile_image-removebg-preview.png" style="background: none;" alt="Hero Image"> 
+                <img class="mxd-move" src="img/krishna/remover.png" style="background: none; border-radius: 45%;" alt="Hero Image"> 
               </div>
               <div class="hero-09-objects__item item-01 loading__item">
                 <div class="mxd-counter horizontal">
