--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
       <!-- header controls -->
       <div class="mxd-header__controls loading__fade">
         <button id="color-switcher" class="mxd-color-switcher" type="button" role="switch" aria-label="light/dark mode" aria-checked="true"></button>
-        <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right-up custom-orange-hover" href="contact.html">
-          <span class="btn-caption">Hi Buddy!</span>
+        <a class="btn btn-anim btn-default btn-mobile-icon btn-outline slide-right-up custom-orange-hover" href="about-me.html">
+          <span class="btn-caption">About Me !</span>
           <i class="ph-bold ph-arrow-up-right"></i>
         </a>
       </div>
